[project]
name = "supahealth"
version = "0.1.0"
description = "A modern web application with FastAPI and OpenAI integration"
authors = [
    {name = "SupaHealth Team"}
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "sqlalchemy>=1.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.5",
    "email-validator>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "alembic>=1.7.0",
    "psycopg2-binary>=2.9.0",
    "websockets>=10.0",
    "requests>=2.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[project.scripts]
reset-db = "scripts.reset_db:main"
lint = "scripts.lint:main"
lint-fix = "scripts.lint:fix"
